
Device specific changes/fixes
	* OnLineCommander - fix loading resource bundle
	* PolaronEx - fix exception while processing channel 2
	* Polaron* - fix processing detection channel 2
	* Core-Telemetry - initial release
	* JetiAdapter - update dialog width Windows
	* Pulsar3 - fix energy calculation
	* IGCAdapter - consider TDS entries if exist 

Version 3.4.3 - 09 Sep 2020
Generic changes/fixes
	* fix display problem of geo-coordinates in degree curve compare
	* update several naming
	* KMZ export, remove definition of relative altitude start point out of definition of LookAt

Device specific changes/fixes
	* OnLineCommander - add initial support
	* iChargerUSB - fix some possible exception in charger dialog reading data from connected device
	* HoTTAdpter2* - add missing property reduction/offset to Temperature Rx
	* IGCAdapter - fix flight number parsing, parsing F record, record naming

Version 3.4.2 - 04 Aug 2020
Generic changes/fixes
	* fix cell voltage dialog adjusting value position
	* remove guava-jre, joda-time dependency
	* add several missing license files
	* add option to force 10 major scale ticks while rounding graphics end values
	* enable class based log level configuration device sub packages (p.e. gde.device.junsi.modbus)
	* enable USB HID device selection while devices with almost identical characteristics connected
	* enable secondary trigger range in properties editor (functional added in 3.4.0)
	* add JAVA_IO_TMPDIR GDE cleanup tree (exported help files)
	* macOS build - add code signing app and dmg to fulfill gatekeeper requirements
	* add Java version check, detect run time version out of specified range
	* update jSerialComm to version 2.6.2
	* use system cursor for measuring to avoid misplaced cursor while sized desktop
	* documentation update
	* remove leading blanks while CSV relative time export
	* fix GPS export make LookAt section related
	* fix display problem of geo-coordinates in curve compare
	* add macOS touch bar support